# micrOSAL

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .markdownlint.json  CMakeLists.txt  Doxyfile  Kconfig  LICENSE  NOTICE  README.md
.github/workflows/: ci.yml
cmake/: MemoryReport.cmake  osal_diagnostics.cmake
docs/: TestCoverage.md  backend_integration.md  c_api.md  design.md  microsal_channel_spec.md  threading_model.md
docs/bus/: backends.md  bus_overview.md  lcd_pubsub.md  premium_pubsub.md
docs/diagrams/: README.md  _render_profile.puml  _render_profile_print.puml  architecture.puml  backend_map.puml  build_flow.puml  bus_architecture.puml  bus_class_diagram.puml  bus_sequence_publish.puml  capability_matrix.puml  class_diagram.puml  emulation_strategy.puml  memory_layout.puml  sequence_condvar.puml  sequence_memory_pool.puml  sequence_mutex.puml  sequence_ring_buffer.puml  sequence_rwlock.puml  sequence_thread_lifecycle.puml  sequence_work_queue.puml
docs/doxygen/: README.md
examples/: .clang-tidy  CMakeLists.txt
examples/bus/: CMakeLists.txt  example_signal_lcd.cpp  example_signal_zephyr.cpp
include/microsal/: microsal_config.hpp
include/microsal/bus/: osal_bus.hpp  osal_signal.hpp  osal_signal_premium.hpp
include/microsal/bus/detail/: osal_bus_fwd.hpp  osal_signal_backend_delegated.hpp  osal_signal_backend_generic.hpp  osal_signal_backend_mock.hpp  osal_signal_backend_zephyr.hpp  osal_signal_traits.hpp
include/osal/: backend_traits.hpp  backends.hpp  barrier.hpp  capabilities.hpp  clock.hpp  concepts.hpp  condvar.hpp  delayable_work.hpp  error.hpp  event_flags.hpp  irq_mask_guard.hpp  mailbox.hpp  memory_pool.hpp  message_buffer.hpp  mutex.hpp  notification.hpp  object_wait_set.hpp  osal.hpp  osal_c.h  queue.hpp  ring_buffer.hpp  rwlock.hpp  semaphore.hpp  spinlock.hpp  stream_buffer.hpp  thread.hpp  thread_local_data.hpp  timer.hpp  types.hpp  version.hpp  wait_set.hpp  work_queue.hpp
include/osal/bus/: config.hpp  osal_bus.hpp  osal_signal.hpp  osal_signal_premium.hpp
include/osal/bus/detail/: osal_bus_backend_delegated.hpp  osal_bus_backend_generic.hpp  osal_bus_backend_mock.hpp  osal_bus_backend_zephyr.hpp  osal_bus_fwd.hpp  osal_signal_backend_delegated.hpp  osal_signal_backend_generic.hpp  osal_signal_backend_mock.hpp  osal_signal_backend_zephyr.hpp  osal_signal_traits.hpp
include/osal/detail/: atomic_compat.hpp
scripts/: README.md  format.sh  generate_diagrams.sh  generate_diagrams_print.sh  memory_footprint.py  svg_to_pdf.py  tidy.sh
src/bare_metal/: bare_metal_backend.cpp
src/chibios/: chibios_backend.cpp
src/cmsis_rtos/: cmsis_rtos_backend.cpp
src/cmsis_rtos2/: cmsis_rtos2_backend.cpp
src/common/: backend_timeout_adapter.hpp  emulated_barrier.inl  emulated_condvar.inl  emulated_event_flags.inl  emulated_memory_pool.inl  emulated_message_buffer.inl  emulated_rwlock.inl  emulated_spinlock.inl  emulated_stream_buffer.inl  emulated_task_notify.inl  emulated_work_queue.inl  osal_c.cpp
src/common/posix/: posix_barrier.inl  posix_clock.inl  posix_condvar.inl  posix_pthread_work_queue.inl  posix_rwlock.inl
src/embos/: embos_backend.cpp
src/freertos/: freertos_backend.cpp
src/integrity/: integrity_backend.cpp
src/linux/: linux_backend.cpp
src/micrium/: micrium_backend.cpp
src/nuttx/: nuttx_backend.cpp  nuttx_work_queue.inl
src/posix/: posix_backend.cpp
src/px5/: px5_backend.cpp
src/qnx/: qnx_backend.cpp
src/rtems/: rtems_backend.cpp
src/threadx/: threadx_backend.cpp
src/vxworks/: vxworks_backend.cpp
src/zephyr/: zephyr_backend.cpp  zephyr_spinlock.inl
tests/: .clang-tidy  CMakeLists.txt  c_api_c_check.c  test_barrier.cpp  test_c_api.cpp  test_clock.cpp  test_condvar.cpp  test_delayable_work.cpp  test_event_flags.cpp  test_integration.cpp  test_mailbox.cpp  test_memory_pool.cpp  test_message_buffer.cpp  test_mutex.cpp  test_notification.cpp  test_object_wait_set.cpp  test_queue.cpp  test_result.cpp  test_ring_buffer.cpp  test_rwlock.cpp  test_semaphore.cpp  test_spinlock.cpp  test_stream_buffer.cpp  test_thread.cpp  test_thread_local_data.cpp  test_timer.cpp  test_wait_set.cpp  test_work_queue.cpp
tests/bus/: CMakeLists.txt  test_osal_signal_backends.cpp  test_osal_signal_lcd.cpp  test_osal_signal_premium.cpp
tests/freertos/: CMakeLists.txt  FreeRTOSConfig.h
tests/freertos/src/: main.cpp
tests/nuttx/: CMakeLists.txt  Kconfig  nuttx
tests/nuttx/src/: main.cpp  nuttx_backend_impl.cpp
tests/zephyr/: CMakeLists.txt  cpp20.conf  prj.conf  testcase.yaml
tests/zephyr/src/: main.cpp
tests/zephyr/support/: nrf52840_headless.resc
zephyr/: module.yml
